<resources>
    <string name="app_name">Hot Tours</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <array name="days_of_week">
        <item>@string/mon</item>
        <item>@string/tue</item>
        <item>@string/wed</item>
        <item>@string/thu</item>
        <item>@string/fri</item>
        <item>@string/sat</item>
        <item>@string/sun</item>
    </array>
    
    <array name="months_of_year">
        <item>@string/jan</item>
        <item>@string/feb</item>
        <item>@string/mar</item>
        <item>@string/apr</item>
        <item>@string/may</item>
        <item>@string/jun</item>
        <item>@string/jul</item>
        <item>@string/aug</item>
        <item>@string/sep</item>
        <item>@string/oct</item>
        <item>@string/nov</item>
        <item>@string/dec</item>
    </array>

    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>

    <string name="jan">Jan</string>
    <string name="feb">Feb</string>
    <string name="mar">Mar</string>
    <string name="apr">Apr</string>
    <string name="may">May</string>
    <string name="jun">Jun</string>
    <string name="jul">Jul</string>
    <string name="aug">Aug</string>
    <string name="sep">Sep</string>
    <string name="oct">Oct</string>
    <string name="nov">Nov</string>
    <string name="dec">Dec</string>

    <string name="action_settings">Settings</string>
    <string name="toolbar_placeholder">Country City</string>
    <string name="from_city">From City:</string>
    <string name="from_city_placeholder">Some City</string>
    <string name="hotel_name">Hotel Title:</string>
    <string name="hotel_title_placeholder">Some hotel title</string>
    <string name="hotel_rating">Amount of Stars:</string>
    <string name="hotel_rating_placeholder">Hotel Rating</string>
    <string name="meal_type">Meal Type:</string>
    <string name="meal_type_placeholder">Meal type</string>
    <string name="adult_amount_placeholder">2</string>
    <string name="adult_amount">Adult Amount:</string>
    <string name="children_amount">Children Amount:</string>
    <string name="children_amount_placeholder">2</string>
    <string name="duration">Duration:</string>
    <string name="duration_placeholder">7 days</string>
    <string name="date_from">Date From:</string>
    <string name="date_from_placeholder">Fri, Dec 31, 2017</string>
    <string name="price_value">Price:</string>
    <string name="price_value_placeholder">350</string>
    <string name="currency_symbol_placeholder">$</string>
    <string name="currency">Currency:</string>
    <string name="transport_type_placeholder">Flight</string>
    <string name="tramspot_type">Transport Type:</string>
    <string name="loading">Loading</string>
    <string name="no_data">Tour didn\'t find</string>
    <string name="name_hint">Type your name</string>
    <string name="phone_hint">Type your phone number</string>
    <string name="email_hint">Type your email</string>
    <string name="city_hint">Type your city</string>
    <string name="empty_data_message">Some fields are empty</string>
    <string name="posting_success">Order was sent</string>
    <string name="posting_failed">Server is not available</string>
    <string name="create_order">Order</string>
    <string name="to_country">To Country</string>
    <string name="to_country_placeholder">Some Country</string>
    <string name="night_amount">Night Amount</string>
    <string name="load_countries_error">Error when loading countries</string>
    <string name="no_countries_found">No countries found</string>
    <string name="load_cities_error">No cities loaded</string>
    <string name="no_cities_founded">Found no cities</string>
    <string name="load_hotel_ratings_error">No Hotel Ratings were loaded</string>
    <string name="no_hotel_ratings_found">No Hotel Ratings faounded</string>
    <string name="load_meal_types_error">No Meal Types were loaded</string>
    <string name="no_meal_types_found">No Meal Types were founded</string>
    <string name="date_till">Till:</string>
    <string name="date_till_placeholder">Wed, Dec 31, 2017</string>
    <string name="travelers">Travelers</string>
    <string name="adults">Adults:</string>
    <string name="adults_placeholder">1</string>
    <string name="children">Children:</string>
    <string name="children_placeholder">0</string>
    <string name="find_button">Find tours</string>
    <string name="select_date">Select date:</string>
    <string name="year_placeholder">2017</string>
    <string name="day_month_placeholder">Mon, Dec 31</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="load_countries_success">Countries loaded</string>
    <string name="load_cities_success">Cities loaded</string>
    <string name="load_hotel_ratings_success">Hotel ratings loaded</string>
    <string name="load_meal_types_success">Meal types loaded</string>
    <string name="load_children_error">Loading was failed</string>
    <string name="load_children_success">Loading finished succesfully</string>
    <string name="load_adults_error">Loading failed</string>
    <string name="load_adults_success">Loading finished succesfully</string>
    <string name="tours_not_founded">Tours not found</string>
    <string name="tours_succesfully_loaded">Tours loaded succesfully</string>
    <string name="searching">Searching</string>
    <string name="hot_tours">Hot Tours</string>
    <string name="filter_all">All</string>
    <string name="filter_country">Country</string>
    <string name="filter_city">City</string>
    <string name="filter_duration">Duration</string>
    <string name="filter_price">Price</string>
    <string name="filter_date">Date</string>
    <string name="hryna">Hryvna</string>
    <string name="euro">Euro</string>
    <string name="dollar">Dollar</string>
    <string name="sorting">Sorting</string>
    <string name="filter_currency">Currency</string>
    <string name="refresh">Refresh</string>
    <string name="searching_tours">Searching Tours</string>
    <string name="hot_tours_ua">Hot Tours Ukraine</string>
    <string name="tours_updating">Tours are updated</string>
    <string name="tours_succesfully_updated">Tours updated succesfully</string>
    <string name="started_updating">Updating started</string>
    <string name="dialog_not_awailable_connection">No connection with server. Check internet connection.</string>
    <string name="no_connection_dialog_message">dialog for no connection</string>
    <string name="device_hint">Device / Android version</string>
    <string name="feedback_hint">Leave your feedback here</string>
    <string name="posting_feedback_success">Your feedback was sent</string>
    <string name="posting_feedback_fail">No connection to the server</string>
    <string name="tours_load_fail">Error loading tours</string>
    <string name="feedback">Feedback</string>
    <string name="hot_tours_title">Горящие туры</string>
    <string name="searching_title">Поиск туров</string>
    <string name="feedback_title">Отзыв</string>
    <string name="name">Name:</string>
    <string name="phone_number">Phone number:</string>
    <string name="email">Email:</string>
    <string name="city">City:</string>
    <string name="device">Device:</string>
    <string name="no_connecion">No connection to the server</string>
    <string name="no_connection_indicator">No connection</string>
    <string name="beta_test">Beta Test</string>
    <string name="dialog_beta_test">Dialog_Beta_Test</string>
    <string name="beta_test_message">Приложение находится в Beta тестировании. Для отправки сообщения команде разработки перейдите во вкладку \"Отзыв\".</string>
    <string name="tour_order">Book</string>
    <string name="safe">We use your data only for making an order, and emergency communication without transferring them to third parties.</string>
    <string name="from">From: </string>
    <string name="nights">Nights: </string>
    <string name="anyCountry">Any country</string>
    <string name="anyRating">Any rating</string>
    <string name="anyCity">Any city</string>
    <string name="anyType">Any meal type</string>
    <string name="call_operator">Call</string>
    <string name="calling_failed">Calling was forbidden</string>
</resources>
