<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_date"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="5dp"
        android:textSize="20dp"
        android:textColor="@color/details_text_head"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/year_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="18dp"
            android:text="@string/year_placeholder"
            android:textColor="@color/text_color_white"/>

        <TextView
            android:id="@+id/date_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="30dp"
            android:text="@string/day_month_placeholder"
            android:textColor="@color/text_color_white"/>

    </LinearLayout>

    <CalendarView
        android:id="@+id/calendar_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_white"
        android:orientation="horizontal"
        android:padding="16dp"
        android:gravity="right">
        
        <Button
            android:id="@+id/but_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:textColor="@color/colorPrimary"
            android:textSize="20dp"
            android:background="@color/background_white"
            />

        
    </LinearLayout>
</LinearLayout>